[kafka/3.x]Upgrade kafka 3.x build to JDK 17
Summary:
Upgrade kafka 3.x build to use jdk 17.
In jdk 17 kerberos functionality related implementation (like sun.security.krb5) is not exposed publicly hence, in order to get access to the internal api we will need to add the below flag

```
--add-exports java.security.jgss/sun.security.krb5=ALL-UNNAMED
```

Test Plan:
Deployed on h20aperf-phx with arm and amd hosts hybrid,

Reviewers: #ldap_kafka_admins, #ldap_kafka_core_reviewers, kchandraprakash

Reviewed By: #ldap_kafka_admins, #ldap_kafka_core_reviewers, kchandraprakash

JIRA Issues: DKAFC-5601

Differential Revision: https://code.uberinternal.com/D16142995