@@ -78,9 +78,9 @@ if cat /etc/kafka/server.properties | grep -e "^zookeeper.set.acl=true"; then
   export EXTRA_ARGS="${EXTRA_ARGS} -Djava.security.auth.login.config=${JAAS_CONFIG}"
 fi
 
-export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
-export KAFKA_HEAP_OPTS="${KAFKA_HEAP_OPTS} ${HEAP_OPTS_JDK11}"
-export EXTRA_ARGS="${EXTRA_ARGS} --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
+export JAVA_HOME=/usr/lib/jvm/java-17-openjdk
+export KAFKA_HEAP_OPTS="${KAFKA_HEAP_OPTS} ${HEAP_OPTS_JDK17}"
+export EXTRA_ARGS="${EXTRA_ARGS} --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-exports java.security.jgss/sun.security.krb5=ALL-UNNAMED"
 # Check if cluster is currently setup with secure settings. If true, add secure to Kafka lib folder
 if cat /etc/kafka/server.properties | grep -e "^listeners=" | grep -q "SSL://"; then
   # EXTRA_ARGS is picked up by kafka-server-start.sh
